# affect-wave

./: .env.example  .gitignore  PROJECT_CHARTER.md  README.en.md  README.md  TRADEMARK_POLICY.md  pyproject.toml  requirements.md  setup.bat
data/evalsets/: aozora-output-validation-v1.json  core-output-validation-v1.json
data/prototypes/: affect-axes.json  appraisal-axes.json  concept-to-canonical-map.json  emotion-concepts-171.json  emotion-labels.json
docs/: README.md  RUNBOOK.md  acceptance-checklist.md  evaluation-datasets.md  implementation-checklist.md  improvement-tasks.md  requirements-api-poc.md  specification.md  test-design.md  yamagetsuki-eval-2026-04-03.txt
docs/artifacts/: artifacts_aozora_eval_2026-04-04.json  artifacts_aozora_eval_summary_2026-04-04.json  artifacts_evalset_2026-04-04.json  artifacts_readme_refresh_2026-04-04.json  artifacts_yamagetsuki_results.json  artifacts_yamagetsuki_results_2026-04-04.json  artifacts_yamagetsuki_results_2026-04-04_after_improve.json  artifacts_yamagetsuki_results_2026-04-04_after_tune.json  artifacts_yamagetsuki_results_2026-04-04_after_tune_v2.json  artifacts_yamagetsuki_results_2026-04-04_isolated.json  artifacts_yamagetsuki_wave_2026-04-04_after_tune_v2.json
src/: __init__.py
src/affect_wave/: __init__.py  config.py  main.py
tests/: conftest.py  test_adapters.py  test_api.py  test_config.py  test_conversation.py  test_converter.py  test_embedding.py  test_integration_cli.py  test_integration_inference.py  test_main.py  test_pipeline.py  test_prototypes.py  test_schemas.py  test_store.py
(+18 files in other folders)
