[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affect-wave"
version = "0.1.0"
description = "Affect expression interface for visualizing emotional nuances in LLM conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "affect-wave contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
discord = [
    "discord.py>=2.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
affect-wave = "affect_wave.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/affect_wave"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
